fix(footer and header): add links and fix spacing

--- a/styles/scss/vtex.rich-text.scss
+++ b/styles/scss/vtex.rich-text.scss
@@ -13,8 +13,9 @@
   }
 }
 
-.paragraph--top-bar-link{
+.paragraph--top-bar-link {
   margin: 0;
+  max-width: 121px;
 }
 
 .container--top-bar-link {
